Removed a non-standard WebDAV property (executable) from list of properties requested during a PROPFIND request.

BUG: 183072
FIXED-IN: 4.8.1